2019-03-14         [RELEASE] Release of t3tags 1.0.0 (Nicole Cordes)
2019-03-14 d1ec7e8 [TASK] Fix coding style according to PHP-CS-Fixer (Nicole Cordes)
2019-03-14 afaa38d [FEATURE] Provide basic README documentation (Nicole Cordes)
2019-03-14 9e21c2f [FEATURE] Check TCA table exists for provided tableName in TagRegistry (Nicole Cordes)
2019-03-14 155c2e5 [BUGFIX] Remove superfluous extensionKey parameter from TagRegistry (Nicole Cordes)
2019-03-12 99bb5c3 [BUGFIX] Remove code smell according to SonarQube Scanner (Nicole Cordes)
2019-03-12 b2ca8cd [FEATURE] Add compatibility to TYPO3 9.5 (Nicole Cordes)
2019-03-11 cc8be92 [FEATURE] Add functional tests for TagRepository (Nicole Cordes)
2019-03-11 9167ab5 [FEATURE] Add basic test extension for functional tests (Nicole Cordes)
2019-03-11 cf92350 [FEATURE] Add first version for TYPO3 8.7 (Nicole Cordes)
2019-03-09 36c8b4b [TASK] Add basic extension files (Nicole Cordes)